--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.6.4",
+    "@neondatabase/serverless": "^0.9.5",
+    "dotenv": "^16.4.5",
+    "drizzle-kit": "^0.24.2",
+    "drizzle-orm": "^0.33.0",
     "next": "14.2.13",
+    "pg": "^8.13.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0"
